@@ -1,0 +1,12 @@
+# Copyright 2013, Paul Johnson (paul@pjcj.net)
+
+# This software is free.  It is licensed under the same terms as Perl itself.
+
+# The latest version of this software should be available from my homepage:
+# http://www.pjcj.net
+
+package Taint;
+
+eval 1 unless defined &X;
+
+1;
