@@ -1,0 +1,16 @@
+#!/usr/bin/perl
+
+# Copyright 2013, Paul Johnson (paul@pjcj.net)
+
+# This software is free.  It is licensed under the same terms as Perl itself.
+
+# The latest version of this software should be available from my homepage:
+# http://www.pjcj.net
+
+use strict;
+use warnings;
+use lib "tests";
+
+use Taint;
+
+print "taint\n";
