@@ -2,6 +2,7 @@ Devel::Cover history
 
 {{$NEXT}}
  - Fix segv in constant folding of xor ops (gitbub 40).
+ - Fix various problems running Devel::Cover under tainting (github 41).
 
 Release 0.99 - 31 December 2012
  - Improve documentation (Olaf Alders) (github 34).
